--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/param.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/param.html
@@ -92,7 +92,7 @@
 											<th>参数键</th>
 											<th>参数值</th>
 											<th>所属分类</th>
-											<th class="text-center">操作</th>
+											<th></th>
 										</tr>
 									</thead>
 									<tbody>
@@ -160,6 +160,64 @@
 				</div>
 				<!-- /.modal -->
 
+				<!-- 修改参数窗口 -->
+				<div class="modal fade" id="w-update" tabindex="-1" data-backdrop="static">
+					<div class="modal-dialog w450">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+								<h3 class="modal-title">修改键值参数</h3>
+							</div>
+							<div class="modal-body">
+								<form id="fo-update" class="form-horizontal">
+									<input type="hidden" name="id" />
+									<div class="form-group">
+										<label class="col-md-3 control-label required">所属分类：</label>
+										<div class="col-md-9 field">
+											<select name="type" class="basic-single form-control">
+												<option value="0">缺省</option>
+											</select>
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-3 control-label required">参数名称：</label>
+										<div class="col-md-9 field">
+											<input type="text" name="name" class="form-control" />
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-3 control-label required">参数键：</label>
+										<div class="col-md-9 field">
+											<input class="form-control" type="text" name="param_key" />
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-3 control-label required">参数值：</label>
+										<div class="col-md-9 field">
+											<input name="value" class="form-control" type="text" />
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-3 control-label">备注</label>
+										<div class="col-md-9 field">
+											<textarea name="remark" class="form-control textarea-grow" rows="4"></textarea>
+										</div>
+									</div>
+								</form>
+							</div>
+							<div class="modal-footer">
+								<button type="submit" form="fo-update" class="btn btn-sm btn-success btn-gradient">保存</button>
+								<button type="button" class="btn btn-sm btn-danger btn-gradient" data-dismiss="modal">关闭</button>
+							</div>
+						</div>
+						<!-- /.modal-content -->
+					</div>
+					<!-- /.modal-dialog -->
+				</div>
+				<!-- /.modal -->
+
 
 			</section>
 			<!-- End: 业务办理区 -->
@@ -194,6 +252,10 @@
 			$('#dt-param tbody').on('click', 'tr', function() {
 				$(this).toggleClass('selected');
 			});
+			$('#dt-param tbody').on('dblclick', 'tr', function() {
+				fnShowUpdate($('#dt-param').DataTable().row(this).data());
+			});
+
 			/******* 事件监听.end ********/
 
 			//初始化下拉框
@@ -213,45 +275,51 @@
 								lengthMenu : [ [ 10, 20, 50, 200, 500 ], [ 10, 20, 50, 200, 500 ] ],
 								ordering : false,
 								processing : true,
-								serverSide : false, //false：一次查询，客户端分页的模式；true：服务端分页模式
+								serverSide : true, //false：一次查询，客户端分页的模式；true：服务端分页模式
 								deferLoading : 0, //屏蔽初始化后自动加载数据
 								pagingType : "full_numbers",
-								columns : [ {
-									data : "id",
-									width : 60
-								}, {
-									data : "name",
-									width : 200
-								}, {
-									data : "param_key",
-									width : 150
-								}, {
-									data : "value"
-								}, {
-									data : "type",
-									render : function(data, type, row, meta) {
-										switch (row.type) {
-										case '0':
-											return '缺省';
-										default:
-											return row.type
-										}
-									},
-									width : 200
-								} ],
-								columnDefs : [
+								columns : [
 										{
-											targets : 5,//动作列
-											width : 50,
+											data : "id",
+											width : 60
+										},
+										{
+											data : "name",
+											width : 200
+										},
+										{
+											data : "param_key",
+											width : 150
+										},
+										{
+											data : "value"
+										},
+										{
+											data : "type",
+											width : 200,
 											render : function(data, type, row, meta) {
-												var html = "<div class='text-center'><button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
+												switch (row.type) {
+												case '0':
+													return '缺省';
+												default:
+													return row.type
+												}
+											}
+										},
+										{
+											width : 80,
+											render : function(data, type, row, meta) {
+												var html = "<div class='text-right text-nowrap'><button class='btn btn-success btn-xs btn-gradient mr5' onclick='fnShowUpdate("
+														+ JSON.stringify(row) + ")'>修改</button>";
+												html += "<button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
 														+ JSON.stringify(row) + ")'>删除</button></div>";
 												return html;
 											}
-										}, {
-											"defaultContent" : "",
-											"targets" : "_all"
 										} ],
+								columnDefs : [ {
+									"defaultContent" : "",
+									"targets" : "_all"
+								} ],
 							});
 
 			//表单校验规则
@@ -287,9 +355,9 @@
 					}
 				}
 			}
-
-			//绑定新增表单校验和提交响应事件
+			//绑定表单校验和提交响应事件
 			My.validate('#fo-new', fnNew, validateOptions);
+			My.validate('#fo-update', fnUpdate, validateOptions);
 
 		});
 
@@ -314,6 +382,38 @@
 					if (data.code == '1') {
 						My.notify(data.msg);
 						$('#w-new').modal('hide');
+						fnQuery();
+					} else {
+						My.notify(data.msg, 'danger');
+					}
+				}
+			});
+		}
+
+		//弹出修改窗口
+		function fnShowUpdate(row) {
+			$.ajax({
+				type : 'post',
+				url : 'get',
+				data : row,
+				success : function(data) {
+					$('#w-update').modal();
+					$("#fo-update")[0].reset();
+					$("#fo-update").setForm(data);
+				}
+			});
+		}
+		
+		//保存更新
+		function fnUpdate() {
+			$.ajax({
+				type : 'post',
+				url : 'update',
+				data : My.params('#fo-update'),
+				success : function(data) {
+					if (data.code == '1') {
+						My.notify(data.msg);
+						$('#w-update').modal('hide');
 						fnQuery();
 					} else {
 						My.notify(data.msg, 'danger');
@@ -362,7 +462,7 @@
 									});
 								}
 							});
-		}
+		             }
 
 		/*]]>*/
 	</script>
