--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/org.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/org.html
@@ -87,7 +87,7 @@
 												<th>上级部门</th>
 												<th>类型</th>
 												<th>扩展码</th>
-												<th class="text-center">操作</th>
+												<th></th>
 											</tr>
 										</thead>
 										<tbody>
@@ -176,6 +176,81 @@
 					</div>
 					<!-- /.modal -->
 
+					<!-- 修改窗口 -->
+					<div class="modal fade" id="w-update" tabindex="-1" data-backdrop="static">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+									<h3 class="modal-title">修改部门</h3>
+								</div>
+								<div class="modal-body">
+									<form id="fo-update" class="form-horizontal">
+										<input type="hidden" name="id" />
+										<div class="form-group">
+										     <!-- //TODO 后续版本支持修改上级部门 -->
+											<label class="col-md-2 control-label required">上级部门：</label>
+											<div class="col-md-10 field">
+												<input class="form-control" type="text" name="parent_name" readonly="readonly" />
+											</div>
+											<input type="hidden" name="parent_id" />
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label required">部门类型：</label>
+											<div class="col-md-10 field">
+												<select name="type" class="basic-single form-control">
+													<option value="1">缺省</option>
+												</select>
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label required">部门名称：</label>
+											<div class="col-md-10 field">
+												<input type="text" name="name" class="form-control" />
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label required">是否展开：</label>
+											<div class="col-md-10 field">
+												<select name="is_expanded" class="basic-single form-control">
+													<option value="1" selected="selected">是</option>
+													<option value="0">否</option>
+												</select>
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label">扩展码：</label>
+											<div class="col-md-10 field">
+												<input class="form-control" type="text" name="biz_code" />
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label">扩展JSON：</label>
+											<div class="col-md-10 field">
+												<textarea name="ext" class="form-control textarea-grow" rows="4"></textarea>
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label">备注：</label>
+											<div class="col-md-10 field">
+												<textarea name="remark" class="form-control textarea-grow" rows="4"></textarea>
+											</div>
+										</div>
+									</form>
+								</div>
+								<div class="modal-footer">
+									<button type="submit" form="fo-update" class="btn btn-sm btn-success btn-gradient">保存</button>
+									<button type="button" class="btn btn-sm btn-danger btn-gradient" data-dismiss="modal">关闭</button>
+								</div>
+							</div>
+							<!-- /.modal-content -->
+						</div>
+						<!-- /.modal-dialog -->
+					</div>
+					<!-- /.modal -->
+
 
 				</div>
 
@@ -231,48 +306,55 @@
 								dom : 'tr<"dt-panelfooter clearfix"lip>',
 								pageLength : 20,
 								lengthMenu : [ [ 10, 20, 50, 200, 500 ], [ 10, 20, 50, 200, 500 ] ],
+								//autoWidth: false,
 								ordering : false,
 								processing : true,
 								serverSide : true, //false：一次查询，客户端分页的模式；true：服务端分页模式
 								deferLoading : 0, //屏蔽初始化后自动加载数据
 								pagingType : "full_numbers",
-								columns : [ {
-									data : "id",
-									width : 60
-								}, {
-									data : "name",
-									width : 120
-								}, {
-									data : "parent_name",
-									width : 120
-								},  {
-									data : "type",
-									render : function(data, type, row, meta) {
-										switch (row.type) {
-										case '1':
-											return '缺省';
-										default:
-											return row.type
-										}
-									},									
-									width : 100
-								}, {
-									data : "biz_code",
-									width : 100
-								} ],
-								columnDefs : [
+								columns : [
 										{
-											targets : 5,//动作列
-											width : 50,
+											data : "id",
+											width : 60
+										},
+										{
+											data : "name",
+											width : 200
+										},
+										{
+											data : "parent_name",
+											width : 200
+										},
+										{
+											data : "type",
 											render : function(data, type, row, meta) {
-												var html = "<div class='text-center'><button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
+												switch (row.type) {
+												case '1':
+													return '缺省';
+												default:
+													return row.type
+												}
+											},
+											width : 100
+										},
+										{
+											data : "biz_code",
+											width : 200
+										},
+										{
+											width : 80,
+											render : function(data, type, row, meta) {
+												var html = "<div class='text-right text-nowrap'><button class='btn btn-success btn-xs btn-gradient mr5' onclick='fnShowUpdate("
+														+ JSON.stringify(row) + ")'>修改</button>";
+												html += "<button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
 														+ JSON.stringify(row) + ")'>删除</button></div>";
 												return html;
 											}
-										}, {
-											"defaultContent" : "",
-											"targets" : "_all"
 										} ],
+								columnDefs : [ {
+									"defaultContent" : "",
+									"targets" : "_all"
+								} ],
 							});
 
 			//表单校验规则
@@ -309,8 +391,9 @@
 				}
 			}
 
-			//绑定新增表单校验和提交响应事件
+			//绑定表单校验和提交响应事件
 			My.validate('#fo-new', fnNew, validateOptions);
+			My.validate('#fo-update', fnUpdate, validateOptions);
 
 			//收缩或展开树
 			function fnToggleTree() {
@@ -328,13 +411,13 @@
 		}); /* end onReady */
 
 		//刷新
-		function fnRefresh(){
+		function fnRefresh() {
 			loadTree();
-			setTimeout(function(){
+			setTimeout(function() {
 				fnQuery();
-			},200);
+			}, 200);
 		}
-		
+
 		//加载树
 		function loadTree() {
 			var setting = {
@@ -379,6 +462,39 @@
 			}
 			$('#dt-org').DataTable().settings()[0].ajax = ajax;
 			$('#dt-org').DataTable().ajax.reload();
+		}
+		
+		//弹出修改窗口
+		function fnShowUpdate(row) {
+			$.ajax({
+				type : 'post',
+				url : 'get',
+				data : row,
+				success : function(data) {
+					data.parent_name = row.parent_name;
+					$('#w-update').modal();
+					$("#fo-update")[0].reset();
+					$("#fo-update").setForm(data);
+				}
+			});
+		}
+		
+		//保存更新
+		function fnUpdate() {
+			$.ajax({
+				type : 'post',
+				url : 'update',
+				data : My.params('#fo-update'),
+				success : function(data) {
+					if (data.code == '1') {
+						My.notify(data.msg);
+						$('#w-update').modal('hide');
+						fnQuery();
+					} else {
+						My.notify(data.msg, 'danger');
+					}
+				}
+			});
 		}
 
 		//打开新增窗口
