--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/role.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/role.html
@@ -90,8 +90,7 @@
 											<th>是否启用</th>
 											<th>创建人</th>
 											<th>创建时间</th>
-											<th class="text-center">授权</th>
-											<th class="text-center">操作</th>
+											<th></th>
 										</tr>
 									</thead>
 									<tbody>
@@ -162,6 +161,67 @@
 				</div>
 				<!-- /.modal -->
 
+				<!-- 修改角色窗口 -->
+				<div class="modal fade" id="w-update" tabindex="-1" data-backdrop="static">
+					<div class="modal-dialog w450">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+								<h3 class="modal-title">修改角色</h3>
+							</div>
+							<div class="modal-body">
+								<form id="fo-update" class="form-horizontal">
+								    <input type="hidden" name="id" />
+									<div class="form-group">
+										<label class="col-md-3 control-label required">角色类型：</label>
+										<div class="col-md-9 field">
+											<select name="type" class="basic-single form-control">
+												<option value="1">缺省</option>
+											</select>
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-3 control-label required">角色名称：</label>
+										<div class="col-md-9 field">
+											<input type="text" name="name" class="form-control" />
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-3 control-label required">是否启用：</label>
+										<div class="col-md-9 field">
+											<select name="is_enable" class="basic-single form-control">
+												<option value="1" selected="selected">是</option>
+												<option value="0">否</option>
+											</select>
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-3 control-label">扩展JSON</label>
+										<div class="col-md-9 field">
+											<textarea name="ext" class="form-control textarea-grow" rows="4"></textarea>
+										</div>
+									</div>
+									<div class="form-group">
+										<label class="col-md-3 control-label">备注</label>
+										<div class="col-md-9 field">
+											<textarea name="remark" class="form-control textarea-grow" rows="4"></textarea>
+										</div>
+									</div>
+								</form>
+							</div>
+							<div class="modal-footer">
+								<button type="submit" form="fo-update" class="btn btn-sm btn-success btn-gradient">保存</button>
+								<button type="button" class="btn btn-sm btn-danger btn-gradient" data-dismiss="modal">关闭</button>
+							</div>
+						</div>
+						<!-- /.modal-content -->
+					</div>
+					<!-- /.modal-dialog -->
+				</div>
+				<!-- /.modal -->
+				
 				<!-- 授权窗口 -->
 				<div class="modal fade" id="w-grant" tabindex="-1" data-backdrop="static">
 					<div class="modal-dialog w500">
@@ -246,64 +306,64 @@
 								serverSide : false, //false：一次查询，客户端分页的模式；true：服务端分页模式
 								deferLoading : 0, //屏蔽初始化后自动加载数据
 								pagingType : "full_numbers",
-								columns : [ {
-									data : "id",
-									width : 60
-								}, {
-									data : "name"
-								}, {
-									data : "type",
-									render : function(data, type, row, meta) {
-										switch (row.type) {
-										case '1':
-											return '缺省';
-										default:
-											return row.type
-										}
-									},										
-									width : 200
-								}, {
-									data : "is_enable",
-									render : function(data, type, row, meta) {
-										switch (row.is_enable) {
-										case '1':
-											return '是';
-										case '0':
-											return '否';
-										default:
-											return row.status
-										}
-									},									
-									width : 100
-								}, {
-									data : "create_by",
-									width : 100
-								}, {
-									data : "create_time",
-									width : 200
-								} ],
-								columnDefs : [
+								columns : [
 										{
-											targets : 6,//动作列
-											width : 30,
-											render : function(data, type, row, meta) {
-												var html = "<div class='text-center'><button class='btn btn-success btn-xs btn-gradient' onclick='fnOpenGrant("
-														+ JSON.stringify(row) + ")'>授权</button></div>";
-												return html;
-											}
+											data : "id",
+											width : 60
 										},
 										{
-											targets : 7,//动作列
-											width : 30,
+											data : "name"
+										},
+										{
+											data : "type",
 											render : function(data, type, row, meta) {
-												var html = "<div class='text-center'><button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
+												switch (row.type) {
+												case '1':
+													return '缺省';
+												default:
+													return row.type
+												}
+											},
+											width : 200
+										},
+										{
+											data : "is_enable",
+											render : function(data, type, row, meta) {
+												switch (row.is_enable) {
+												case '1':
+													return '是';
+												case '0':
+													return '否';
+												default:
+													return row.status
+												}
+											},
+											width : 100
+										},
+										{
+											data : "create_by",
+											width : 100
+										},
+										{
+											data : "create_time",
+											width : 200
+										},
+										{
+											width : 80,
+											render : function(data, type, row, meta) {
+												var html = "<div class='text-right text-nowrap'><button class='btn btn-info btn-xs btn-gradient mr5' onclick='fnShowGrant("
+														+ JSON.stringify(row) + ")'>授权</button>";
+												html += "<button class='btn btn-success btn-xs btn-gradient mr5' onclick='fnShowUpdate("
+														+ JSON.stringify(row) + ")'>修改</button>";
+												html += "<button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
 														+ JSON.stringify(row) + ")'>删除</button></div>";
 												return html;
 											}
-										}, {
-											"defaultContent" : "",
-											"targets" : "_all"
 										} ],
+								columnDefs : [ {
+									"defaultContent" : "",
+									"targets" : "_all"
+								} ],
 							});
 
 			//表单校验规则
@@ -334,8 +394,9 @@
 				}
 			}
 
-			//绑定新增表单校验和提交响应事件
+			//绑定表单校验和提交响应事件
 			My.validate('#fo-new', fnNew, validateOptions);
+			My.validate('#fo-update', fnUpdate, validateOptions);
 
 		});
 
@@ -367,6 +428,38 @@
 				}
 			});
 		}
+		
+		//弹出修改窗口
+		function fnShowUpdate(row) {
+			$.ajax({
+				type : 'post',
+				url : 'get',
+				data : row,
+				success : function(data) {
+					$('#w-update').modal();
+					$("#fo-update")[0].reset();
+					$("#fo-update").setForm(data);
+				}
+			});
+		}
+		
+		//保存更新
+		function fnUpdate() {
+			$.ajax({
+				type : 'post',
+				url : 'update',
+				data : My.params('#fo-update'),
+				success : function(data) {
+					if (data.code == '1') {
+						My.notify(data.msg);
+						$('#w-update').modal('hide');
+						fnQuery();
+					} else {
+						My.notify(data.msg, 'danger');
+					}
+				}
+			});
+		}
 
 		//删除
 		function fnDelete(row) {
@@ -386,7 +479,7 @@
 		}
 
 		//打开授权窗口
-		function fnOpenGrant(row) {
+		function fnShowGrant(row) {
 			$("#fo-grant")[0].reset();
 			$("#fo-grant [name='role_id']").val(row.id);
 			var setting = {
