--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/user.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/user.html
@@ -72,6 +72,9 @@
 											<button id="btn-new" class="btn btn-default btn-gradient btn-sm">
 												<span class="fa fa-plus mr3"></span>新增
 											</button>
+											<button id="btn-reset" class="btn btn-default btn-gradient btn-sm">
+												<span class="fa fa-key mr3"></span>重置密码
+											</button>
 											<button id="btn-refresh" class="btn btn-default btn-gradient btn-sm">
 												<span class="fa fa-refresh mr3"></span>刷新
 											</button>
@@ -89,8 +92,7 @@
 												<th>状态</th>
 												<th>类型</th>
 												<th>扩展码</th>
-												<th class="text-center">授权</th>
-												<th class="text-center">删除</th>
+												<th></th>
 											</tr>
 										</thead>
 										<tbody>
@@ -212,6 +214,144 @@
 					</div>
 					<!-- /.modal -->
 
+					<!-- 修改窗口 -->
+					<div class="modal fade" id="w-update" tabindex="-1" data-backdrop="static">
+						<div class="modal-dialog w700">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+									<h3 class="modal-title">修改用户</h3>
+								</div>
+								<div class="modal-body">
+									<form id="fo-update" class="form-horizontal">
+										<input type="hidden" name="id" />
+										<input type="hidden" name="org_id" />
+										<div class="form-group">
+											<!-- //TODO 后续版本支持修改所属部门 -->
+											<label class="col-md-2 control-label required">所属部门：</label>
+											<div class="col-md-10 field">
+												<input class="form-control" type="text" name="org_name" readonly="readonly" />
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label required">姓名：</label>
+											<div class="col-md-4 field">
+												<input type="text" name="name" class="form-control" />
+											</div>
+											<label class="col-md-2 control-label">性别：</label>
+											<div class="col-md-4 field">
+												<select name="sex" class="basic-single form-control">
+													<option value="1">男</option>
+													<option value="2">女</option>
+													<option value="3" selected="selected">未知</option>
+												</select>
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label required">账号：</label>
+											<div class="col-md-4 field">
+												<input type="text" name="account" class="form-control" />
+											</div>
+											<label class="col-md-2 control-label required">用户状态：</label>
+											<div class="col-md-4 field">
+												<select name="status" class="basic-single form-control">
+													<option value="1" selected="selected">正常</option>
+													<option value="2">锁定</option>
+												</select>
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label required">用户类型：</label>
+											<div class="col-md-4 field">
+												<select name="type" class="basic-single form-control">
+													<option value="1">缺省</option>
+												</select>
+											</div>
+											<label class="col-md-2 control-label">身份证号：</label>
+											<div class="col-md-4 field">
+												<input type="text" name="mobile" class="form-control" />
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label">联系电话：</label>
+											<div class="col-md-4 field">
+												<input type="text" name="mobile" class="form-control" />
+											</div>
+											<label class="col-md-2 control-label">电子邮件：</label>
+											<div class="col-md-4 field">
+												<input type="text" name="email" class="form-control" />
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label">扩展码：</label>
+											<div class="col-md-10 field">
+												<input class="form-control" type="text" name="biz_code" />
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label">扩展JSON：</label>
+											<div class="col-md-10 field">
+												<textarea name="ext" class="form-control textarea-grow" rows="4"></textarea>
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-2 control-label">备注：</label>
+											<div class="col-md-10 field">
+												<textarea name="remark" class="form-control textarea-grow" rows="4"></textarea>
+											</div>
+										</div>
+									</form>
+								</div>
+								<div class="modal-footer">
+									<button type="submit" form="fo-update" class="btn btn-sm btn-success btn-gradient">保存</button>
+									<button type="button" class="btn btn-sm btn-danger btn-gradient" data-dismiss="modal">关闭</button>
+								</div>
+							</div>
+							<!-- /.modal-content -->
+						</div>
+						<!-- /.modal-dialog -->
+					</div>
+					<!-- /.modal -->
+
+					<!-- 重置密码窗口 -->
+					<div class="modal fade" id="w-reset" tabindex="-1" data-backdrop="static">
+						<div class="modal-dialog w450">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+									<h3 class="modal-title">重置密码</h3>
+								</div>
+								<div class="modal-body">
+									<form id="fo-reset" class="form-horizontal">
+										<div class="form-group">
+											<label class="col-md-3 control-label required">新密码：</label>
+											<div class="col-md-9 field">
+												<input type="password" name="new_password" class="form-control" />
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-md-3 control-label required">确认密码：</label>
+											<div class="col-md-9 field">
+												<input type="password" name="confirm_password" class="form-control" />
+											</div>
+										</div>
+									</form>
+								</div>
+								<div class="modal-footer">
+									<button type="submit" form="fo-reset" class="btn btn-sm btn-success btn-gradient">保存</button>
+									<button type="button" class="btn btn-sm btn-danger btn-gradient" data-dismiss="modal">关闭</button>
+								</div>
+							</div>
+							<!-- /.modal-content -->
+						</div>
+						<!-- /.modal-dialog -->
+					</div>
+					<!-- /.modal -->
+
 					<!-- 授权窗口 -->
 					<div class="modal fade" id="w-grant" tabindex="-1" data-backdrop="static">
 						<div class="modal-dialog w700">
@@ -258,7 +398,6 @@
 	<th:block th:include="fragments/scripts" />
 	<script src="/theme/vendor/plugins/ztree/js/jquery.ztree.all.min.js"></script>
 	<script src="/theme/vendor/plugins/duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
-
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 		$(function() {
@@ -272,10 +411,12 @@
 			$("#btn-grant").on("click", fnGrant);
 			$("#btn-refresh").on("click", fnRefresh);
 			$("#btn-t-refresh").on("click", fnRefresh);
+			$("#btn-reset").on("click", fnOpenReset);
 			$("#btn-t-expand").on("click", fnToggleTree);
 			$('#dt-user tbody').on('click', 'tr', function() {
 				$(this).toggleClass('selected');
 			});
+			bootbox.setDefaults("locale", "zh_CN");
 			/******* 事件监听.end ********/
 
 			//初始化部门树
@@ -322,119 +463,118 @@
 								serverSide : true, //false：一次查询，客户端分页的模式；true：服务端分页模式
 								deferLoading : 0, //屏蔽初始化后自动加载数据
 								pagingType : "full_numbers",
-								columns : [ {
-									data : "id",
-									width : 60
-								}, {
-									data : "account",
-									width : 100
-								}, {
-									data : "name",
-									width : 100
-								}, {
-									data : "org_name",
-									width : 120
-								}, {
-									data : "status",
-									render : function(data, type, row, meta) {
-										switch (row.status) {
-										case '1':
-											return '正常';
-										case '2':
-											return '锁定';
-										default:
-											return row.status
-										}
-									},											
-									width : 100
-								}, {
-									data : "type",
-									render : function(data, type, row, meta) {
-										switch (row.type) {
-										case '1':
-											return '缺省';
-										default:
-											return row.type
-										}
-									},									
-									width : 100
-								}, {
-									data : "biz_code",
-									width : 100
-								} ],
-								columnDefs : [
+								columns : [
 										{
-											targets : 7,//动作列
-											width : 25,
-											render : function(data, type, row, meta) {
-												var html = "<div class='text-center'><button class='btn btn-success btn-xs btn-gradient' onclick='fnOpenGrant("
-														+ JSON.stringify(row) + ")'>授权</button></div>";
-												return html;
-											}
+											data : "id",
+											width : 60
 										},
 										{
-											targets : 8,//动作列
-											width : 25,
+											data : "account",
+											width : 100
+										},
+										{
+											data : "name",
+											width : 100
+										},
+										{
+											data : "org_name",
+											width : 120
+										},
+										{
+											data : "status",
 											render : function(data, type, row, meta) {
-												var html = "<div class='text-center'><button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
+												switch (row.status) {
+												case '1':
+													return '正常';
+												case '2':
+													return '锁定';
+												default:
+													return row.status
+												}
+											},
+											width : 100
+										},
+										{
+											data : "type",
+											render : function(data, type, row, meta) {
+												switch (row.type) {
+												case '1':
+													return '缺省';
+												default:
+													return row.type
+												}
+											},
+											width : 100
+										},
+										{
+											data : "biz_code",
+											width : 100
+										},
+										{
+											width : 80,
+											render : function(data, type, row, meta) {
+												var html = "<div class='text-right text-nowrap'><button class='btn btn-info btn-xs btn-gradient mr5' onclick='fnShowGrant("
+														+ JSON.stringify(row) + ")'>授权</button>";
+												html += "<button class='btn btn-success btn-xs btn-gradient mr5' onclick='fnShowUpdate("
+														+ JSON.stringify(row) + ")'>修改</button>";
+												html += "<button class='btn btn-danger btn-xs btn-gradient' onclick='fnDelete("
 														+ JSON.stringify(row) + ")'>删除</button></div>";
 												return html;
 											}
-										}, {
-											"defaultContent" : "",
-											"targets" : "_all"
 										} ],
+								columnDefs : [ {
+									"defaultContent" : "",
+									"targets" : "_all"
+								} ],
 							});
 
 			//表单校验规则
 			var validateOptions = {
 				//校验规则
 				rules : {
-					org_name : {
-						required : true
-					},
-					name : {
-						required : true
-					},
-					account : {
-						required : true
-					},
-					password : {
-						required : true
-					},
-					status : {
-						required : true
-					},
-					type : {
-						required : true
+					org_name : "required",
+					name : "required",
+					account : "required",
+					password : "required",
+					status : "required",
+					type : "required"
+				},
+				//提示信息
+				messages : {
+					org_name : "所属部门不能为空",
+					name : "请输入用户姓名",
+					account : "请输入用户账号",
+					password : "请输入用户密码",
+					status : "请输入用户状态",
+					type : "请输入用户类型"
+				}
+			}
+
+			//绑定表单校验和提交响应事件
+			My.validate('#fo-new', fnNew, validateOptions);
+			My.validate('#fo-update', fnUpdate, validateOptions);
+
+			//表单校验规则
+			var validateOptions2 = {
+				//校验规则
+				rules : {
+					new_password : "required",
+					confirm_password : {
+						required : true,
+						equalTo : "#fo-reset [name='new_password']"
 					}
 				},
 				//提示信息
 				messages : {
-					org_name : {
-						required : '所属部门不能为空'
-					},
-					name : {
-						required : '请输入用户姓名'
-					},
-					account : {
-						required : '请输入用户账号'
-					},
-					password : {
-						required : '请输入用户密码'
-					},
-					status : {
-						required : '请输入用户状态'
-					},
-					type : {
-						required : '请输入用户类型'
+					new_password : "新密码不能为空",
+					confirm_password : {
+						required : "确认密码不能为空",
+						equalTo : "确认密码和新密码不一致，请确认"
 					}
 				}
 			}
+			My.validate('#fo-reset', fnReset, validateOptions2);
 
-			//绑定新增表单校验和提交响应事件
-			My.validate('#fo-new', fnNew, validateOptions);
-			
 			//收缩或展开树
 			function fnToggleTree() {
 				var treeObj = $.fn.zTree.getZTreeObj("tree");
@@ -449,13 +589,13 @@
 			}
 
 		}); /* end onReady */
-		
+
 		//刷新
-		function fnRefresh(){
+		function fnRefresh() {
 			loadTree();
-			setTimeout(function(){
+			setTimeout(function() {
 				fnQuery();
-			},200);
+			}, 200);
 		}
 
 		//加载树
@@ -483,7 +623,7 @@
 				}
 			});
 		}
-		
+
 		//查询列表
 		function fnQuery() {
 			var data = {};
@@ -504,6 +644,50 @@
 			$('#dt-user').DataTable().ajax.reload();
 		}
 
+		//弹出修改窗口
+		function fnShowUpdate(row) {
+			$.ajax({
+				type : 'post',
+				url : 'get',
+				data : row,
+				success : function(data) {
+					$("#fo-update")[0].reset();
+					$('#w-update').modal();
+					data.org_name = row.org_name;
+					$("#fo-update").setForm(data);
+				}
+			});
+		}
+
+		//保存更新
+		function fnUpdate() {
+			$.ajax({
+				type : 'post',
+				url : 'update',
+				data : My.params('#fo-update'),
+				success : function(data) {
+					if (data.code == '1') {
+						My.notify(data.msg);
+						$('#w-update').modal('hide');
+						fnQuery();
+					} else {
+						My.notify(data.msg, 'danger');
+					}
+				}
+			});
+		}
+
+		//打开重置密码窗口
+		function fnOpenReset(e) {
+			var rows = $('#dt-user').DataTable().rows('.selected').data();
+			if (rows.length > 0) {
+				$('#w-reset').modal();
+				$("#fo-reset")[0].reset();
+			} else {
+				My.alert('请先在列表中选中需要重置密码的用户', 'small');
+			}
+		}
+
 		//打开新增窗口
 		function fnOpenNew(e) {
 			$('#w-new').modal();
@@ -520,12 +704,12 @@
 			nodes = treeObj.getSelectedNodes();
 			if (nodes.length > 0) {
 				$("#fo-new [name='org_name']").val(nodes[0].name);
-				$("#fo-new [name='org_id']").val(nodes[0].id);	
+				$("#fo-new [name='org_id']").val(nodes[0].id);
 			}
 		}
 
 		//打开授权窗口
-		function fnOpenGrant(row) {
+		function fnShowGrant(row) {
 			$('#w-grant').modal();
 			$("#fo-grant")[0].reset();
 			$("#fo-grant [name='user_id']").val(row.id);
@@ -608,6 +792,33 @@
 					});
 				}
 			});
+		}
+
+		//重置密码
+		function fnReset() {
+			var rows = $('#dt-user').DataTable().rows('.selected').data();
+			var ids = [];
+			$.each(rows, function(index, row) {
+				ids.push(row.id);
+			});
+			var data = {
+					ids:ids.join(','),
+					password : hex_md5(My.params('#fo-reset').confirm_password)
+			};
+ 			My.confirm('确认重置当前选中[' + rows.length + ']个用户的密码吗？', function(result) {
+				if (result) {
+					$.ajax({
+						type : 'post',
+						url : 'resetPwd',
+						data : data,
+						success : function(data) {
+							$('#w-reset').modal('hide');
+							My.alert(data.msg, 'small');
+						}
+					});
+				}
+			});
+
 		}
 
 		/*]]>*/
