--- a/myclouds-admin-web/src/main/resources/templates/fragments/header-breadcrumb.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/header-breadcrumb.html
@@ -1,11 +1,13 @@
 <!-- Start: Topbar -->
-<header id="topbar" th:fragment="topbar">
+<header id="topbar">
 	<div class="topbar-left">
+	
 		<ol class="breadcrumb">
 			<li class="crumb-active">
-				<a href="/">MyClouds</a>
+				<a href="/"><span class="glyphicon glyphicon-home mr5"></span>中赢卓投</a>
 			</li>
-			<li class="crumb-trail">首页</li>
+			<li>系统管理</li>
+			<li><a href="/">键值参数管理</a></li>
 		</ol>
 	</div>
 </header>
