--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/user.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/user.html
@@ -7,6 +7,9 @@
 </head>
 
 <body class="sb-l-o">
+	<!--/* 公共代码 */-->
+	<div th:replace="fragments/common"></div>
+	
 	<!--/* 主题设置面板 */-->
 	<div th:replace="fragments/skin-toolbox"></div>
 
