--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/enums.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/enums.html
@@ -6,6 +6,9 @@
 </head>
 
 <body class="sb-l-o">
+	<!--/* 公共代码 */-->
+	<div th:replace="fragments/common"></div>
+	
 	<!--/* 主题设置面板 */-->
 	<div th:replace="fragments/skin-toolbox"></div>
 
@@ -114,7 +117,7 @@
 
 				<!-- 新增窗口 -->
 				<div class="modal fade" id="w-new" tabindex="-1" data-backdrop="static">
-					<div class="modal-dialog">
+					<div class="modal-dialog w650">
 						<div class="modal-content">
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -192,7 +195,7 @@
 				
 				<!-- 修改窗口 -->
 				<div class="modal fade" id="w-update" tabindex="-1" data-backdrop="static">
-					<div class="modal-dialog">
+					<div class="modal-dialog w650">
 						<div class="modal-content">
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
