no commit message

--- a/myclouds-admin-web/src/main/resources/templates/login.html
+++ b/myclouds-admin-web/src/main/resources/templates/login.html
@@ -151,11 +151,11 @@
 			My.validate('#fo_login', doLogin, validateOptions);
 			
 			//演示账号模拟登陆 请移除
-/* 			setTimeout(function(){
+ 			setTimeout(function(){
 				$("#fo_login [name='account']").val('root');
 				$("#fo_login [name='password']").val('111111');
-				doLogin();
-			},3000); */
+				//doLogin();
+			},1000);
 
 		});
 
