no commit message

--- a/myclouds-admin-web/src/main/resources/templates/fragments/scripts.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/scripts.html
@@ -5,8 +5,8 @@
 	<script src="/theme/vendor/jquery/jquery_ui/jquery-ui.min.js"></script>
 	<script src="/theme/assets/admin-tools/admin-forms/js/jquery.validate.min.js"></script>
 	<script src="/theme/assets/admin-tools/admin-forms/js/additional-methods.min.js"></script>
-	<script src="/theme/vendor/plugins/datatables/media/js/jquery.dataTables.js"></script>
-	<script src="/theme/vendor/plugins/datatables/media/js/dataTables.bootstrap.js"></script>
+	<script src="/theme/vendor/plugins/datatables/media/js/jquery.dataTables.min.js"></script>
+	<script src="/theme/vendor/plugins/datatables/media/js/dataTables.bootstrap.min.js"></script>
 	<script src="/theme/vendor/plugins/datatables/i18n/chinese.js"></script>
 	<script src="/theme/vendor/plugins/select2/select2.min.js"></script>
 	<script src="/theme/vendor/plugins/magnific/jquery.magnific-popup.js"></script>
