no commit message

--- a/myclouds-admin-web/src/main/resources/templates/fragments/common.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/common.html
@@ -98,7 +98,7 @@
 <!--End：ERROR Window -->
 
 
-<!-- Start: Header Script -->
+<!-- Start: Script -->
 <script type="text/javascript">
 	//注销
 	function fnLogout() {
@@ -186,4 +186,27 @@
 
 	});
 </script>
-<!-- End: Header Script -->
+<!-- End: Script -->
+
+<!-- Start: Script -->
+<script type="text/javascript">
+	$(function() {
+		//统一异常拦截器
+		$(document).ajaxError(function(e,data) {
+			data = data.responseJSON;
+			$('#w-global-error').modal();
+			$('#id-error-path span').text(data.path);
+			$('#id-error-status span').text(data.status);
+			$('#id-error-exception span').text(data.exception);
+			$('#id-error-message').css('overflow-x', 'hidden');
+			$('#id-error-message').text(data.message);
+		});
+		
+		//确保所有最后一个弹出窗口在最顶层显示
+        $(document).on('show.bs.modal', '.modal', function (event) {
+            var zIndex = 1040 + (10 * $('.modal:visible').length);
+            $(this).css('z-index', zIndex);
+        });
+	});
+</script>
+<!-- End: Script -->
