--- a/myclouds-admin-web/src/main/resources/templates/login.html
+++ b/myclouds-admin-web/src/main/resources/templates/login.html
@@ -117,9 +117,15 @@
 
 	</div>
 	<!-- End: Main -->
-
-	<!--/* 公共脚本文件 */-->
-	<th:block th:include="fragments/scripts" />
+	
+	<!-- BEGIN: PAGE SCRIPTS -->
+	<script src="/theme/assets/js/utility/utility.js"></script>
+	<script src="/theme/assets/js/main.js"></script>
+	<script src="/theme/assets/admin-tools/admin-forms/js/jquery.validate.min.js"></script>
+		<script src="/theme/vendor/plugins/pnotify/pnotify.js"></script>
+	<script src="/js/md5.js"></script>
+	<script src="/js/myclouds.js"></script>
+	<!-- END: PAGE SCRIPTS -->
 
 	<!-- CanvasBG Plugin(creates mousehover effect) -->
 	<script src="/theme/vendor/plugins/canvasbg/canvasbg.js"></script>
