no commit message

--- a/myclouds-admin-web/src/main/resources/static/css/myclouds.css
+++ b/myclouds-admin-web/src/main/resources/static/css/myclouds.css
@@ -14,6 +14,25 @@ label.required:before {
     display:inline;
 }
 
+/* begin:控制Modal和Bootbox组件居中 */
+.modal {
+  text-align: center;
+  padding: 0!important;
+}
+.modal:before {
+  content: '';
+  display: inline-block;
+  height: 80%;  /* 可以调节窗口的垂直相对位置 */
+  vertical-align: middle;
+  margin-right: -4px;
+}
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+/* end:控制Modal和Bootbox组件居中 */
+
 /* 表单校验非法提示文本样式 */
 em.error{
 	color: #E63F24;
@@ -24,25 +43,6 @@ em.error{
 table.my{
 	width:100% !important;
 }
-
-/* begin:控制Model和Bootbox组件居中 */
-.modal {
-  text-align: center;
-  padding: 0!important;
-}
-.modal:before {
-  content: '';
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
-  margin-right: -4px;
-}
-.modal-dialog {
-  display: inline-block;
-  text-align: left;
-  vertical-align: middle;
-}
-/* end:控制Modal和Bootbox组件居中 */
 
 .menu-active{
 	background-color: #eeeeee;
