--- a/myclouds-admin-web/src/main/resources/templates/login.html
+++ b/myclouds-admin-web/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" type="text/css" href="/theme/assets/skin/default_skin/css/theme.css" />
 <link rel="stylesheet" type="text/css" href="/theme/assets/admin-tools/admin-forms/css/admin-forms.css" />
-
+<link rel="stylesheet" type="text/css" href="/css/myclouds.css" />
 <link rel="shortcut icon" href="/theme/assets/img/favicon.ico" />
 <script type="text/javascript" src="/theme/vendor/jquery/jquery-1.11.1.min.js"></script>
 </head>
@@ -97,7 +97,7 @@
 							</div>
 							<!-- end .form-body section -->
 							<div class="panel-footer clearfix p10 ph15">
-								<button type="submit" class="btn btn-primary pull-right ph15">登录</button>
+								<button id="btn-login" type="button" class="btn btn-primary pull-right ph15">登录</button>
 								<label class="switch ib switch-primary pull-left input-align mt10">
 									<input type="checkbox" name="remember" id="remember" checked="true" />
 									<label for="remember" data-on="是" data-off="否"></label>
@@ -122,7 +122,6 @@
 	<script src="/theme/assets/js/utility/utility.js"></script>
 	<script src="/theme/assets/js/main.js"></script>
 	<script src="/theme/assets/admin-tools/admin-forms/js/jquery.validate.min.js"></script>
-		<script src="/theme/vendor/plugins/pnotify/pnotify.js"></script>
 	<script src="/js/md5.js"></script>
 	<script src="/js/myclouds.js"></script>
 	<!-- END: PAGE SCRIPTS -->
@@ -133,6 +132,8 @@
 		$(function() {
 			"use strict";
 			Core.init();
+			
+			$("#btn-login").on("click", fnLogin);
 
 			// Init CanvasBG and pass target starting location
 			CanvasBG.init({
@@ -142,42 +143,17 @@
 				},
 			});
 
-			//表单校验规则
-			var validateOptions = {
-				//校验规则
-				rules : {
-					account : {
-						required : true
-					},
-					password : {
-						required : true
-					}
-				},
-				//提示信息
-				messages : {
-					account : {
-						required : '登录账号不能为空'
-					},
-					password : {
-						required : '密码不能为空'
-					}
-				}
-			}
-
-			//绑定新增参数表单校验和提交响应时间
-			My.validate('#fo_login', doLogin, validateOptions);
-
 			//演示账号模拟登陆 请移除
 			setTimeout(function() {
 				$("#fo_login [name='account']").val('root');
 				$("#fo_login [name='password']").val('111111');
-				//doLogin();
+				//fnLogin();
 			}, 1000);
 
 		});
 
 		//登录请求
-		function doLogin() {
+		function fnLogin() {
 			var data = My.params('#fo_login');
 			data.password = hex_md5(data.password);
 			$.ajax({
@@ -188,7 +164,7 @@
 					if (data.code == '1') {
 						window.location.href = './';
 					} else {
-						My.notify(data.msg, 'danger');
+						My.alert(data.msg);
 					}
 				}
 			});
