--- a/myclouds-admin-web/src/main/resources/templates/modules/sys/enums.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/sys/enums.html
@@ -528,7 +528,7 @@
 
 		//删除
 		function fnDelete(row) {
-			My.confirm('确认删除当前枚举元素吗？', function(result) {
+			My.confirm('确认删除当前枚举元素吗？', 'small', function(result) {
 				if (result) {
 					$.ajax({
 						type : 'post',
@@ -548,6 +548,7 @@
 			My
 					.confirm(
 							'<span class="text-danger">请知晓当前操作的必要性和重要性再继续。确认批量同步缓存吗？</span><hr class="mv10 br-lighter"><span class="label label-xs label-info p2"><i class="fa fa-meh-o"></i> 提示</span> 页面上的维护操作，数据已自动同步缓存。',
+							null,
 							function(result) {
 								if (result) {
 									$.ajax({
